# h5ad-cli

./: Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: quay-on-tag.yml  tests.yml
docs/: ELEMENTS_h5ad.md  ELEMENTS_zarr.md  GET_STARTED.md  TESTING.md  TUTORIAL.md
src/h5ad/: cli.py  info.py  read.py
src/h5ad/commands/: __init__.py  export.py  import_data.py  info.py  subset.py  table.py
src/h5ad/core/: __init__.py  info.py  read.py  subset.py
src/h5ad/formats/: __init__.py  array.py  common.py  dataframe.py  image.py  json_data.py  sparse.py  validate.py
src/h5ad/storage/: __init__.py
src/h5ad/util/: __init__.py  path.py
tests/: __init__.py  conftest.py  test_cli.py  test_export.py  test_import.py  test_info_read.py  test_subset.py  test_zarr.py
