[project]
name = "h5ad-cli"
version = "0.1.0"
description = "Streaming CLI utilities for exploring large AnnData .h5ad files"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "h5py>=3.15.1",
    "typer>=0.20.0",
]

[build-system]
requires = ["uv_build>=0.8.0,<0.9.0"]
build-backend = "uv_build"

[project.scripts]
h5ad = "h5ad.cli:main"
